# R2PluginTemplate

./: .gitignore  CMakeLists.txt  README.md
cmake/: R2plugin.cmake
include/: base64.cpp  base64.h
lib/: bits.cpp  convar.cpp  lib.h  loader.h  plugin_lib.cpp  squirrelautobind.h  squirrelclasstypes.h  util.h  vector.h
manifest/: manifest.json  manifest.rc  resource.h  resource.rc
src/: pch.h  plugin.cpp
src/lib/: color.cpp  concommand.cpp  lib.h  loader.cpp  loader.h  logging.h  plugin_abi.h  plugin_lib.cpp  squirrel.cpp  squirrel.h  squirrelautobind.cpp  squirrelclasstypes.h
